# mcpshrink

./: .gitignore  README.md  Untitled.ipynb  config.yaml  hello.py  main.py  model_tester.py  pyproject.toml  query_aug _test.ipynb  requirements.txt  resolve.txt
.ipynb_checkpoints/: query_aug _test-checkpoint.ipynb
models/: __init__.py  expanded_record.py
output/: README.md  demo.csv  expanded_queries.csv  full_demo.jsonl  merged_dataset.csv  student_data.csv  student_data_sft.jsonl  templates.csv
query/augmentation/: config.yaml  helpers.py  main.py  utils.py
query/augmentation/augmentors/: back_translation.py  noise_injection.py  random_augmentation.py
query/generation/: config.yaml  helpers.py  services.py  utils.py
query_augmentation/: main.py
query_augmentation/augmentors/: noise_injection.py
scripts/: model_tester.py  ntlk_helper.py
src/: __init__.py  groq_client.py  helpers.py  llm_client.py  server.py  utils.py
src/knowledge_extraction/: helpers.py  runner.py  services.py  utils.py
src/knowledge_extraction/tests/: test_extraction_helpers.py  test_extraction_services.py  test_extraction_utils.py
src/mcp_servers/: data_analysis.py
src/mcp_servers/data_analysis/: data_analysis.py  helpers.py  server.py
src/mcp_servers/document_analysis/: server.py
src/models/: __init__.py  configs.py  dataset.py  queries.py  tools.py
src/query/augmentation/: services.py  utils.py
src/sft/: baseline.py  helpers.py  inference.py  tune.py  utils.py
src/tests/: test_helpers.py  test_utils.py
tests/: test_config_loader.py
(+8 files in other folders)
