[project]
name = "mcpshrink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel",
    "nlpaug",
    "transformers",
    "sentencepiece",
    "requests>=2.32.5",
    "wikipedia>=1.4.0",
    "nltk>=3.9.2",
    "wikipedia-api>=0.8.1",
    "sacremoses>=0.1.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
default = true
