[project]
name = "mcpshrink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.32.0",
    "nlpaug",
    "transformers",
    "sentencepiece",
    "requests>=2.32.5",
    "wikipedia>=1.4.0",
    "nltk>=3.9.2",
    "wikipedia-api>=0.8.1",
    "sacremoses>=0.1.1",
    "pytest>=8.4.2",
    "fastmcp>=2.12.4",
]
